welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:5: error: ';' expected but '=' found.
	for(i<-0 to 6) { avance(); t[i]=getCouleurSol() ; t[i]=t[i+1]; }
                                       ^Array1:5: error: ';' expected but '=' found.
	for(i<-0 to 6) { avance(); t[i]=getCouleurSol() ; t[i]=t[i+1]; }
                                                              ^